<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big_extra"
        android:layout_marginBottom="@dimen/spacing_big_extra"
        android:layout_marginEnd="@dimen/spacing_medium_extra"
        android:layout_marginStart="@dimen/spacing_medium_extra"
        app:cardCornerRadius="@dimen/font_small_more"
        android:backgroundTint="@color/orange_shadow"
        android:elevation="@dimen/spacing_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:text="@string/developed_by" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:text="@string/dev_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:text="@string/dev_year" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/font_medium_extra"
                android:layout_marginEnd="@dimen/font_medium_extra"
                android:gravity="center_horizontal"
                android:text="@string/app_description" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big_extra"
        android:layout_marginBottom="@dimen/spacing_big_extra"
        android:layout_marginEnd="@dimen/spacing_medium_extra"
        android:layout_marginStart="@dimen/spacing_medium_extra"
        app:cardCornerRadius="@dimen/font_small_more"
        android:backgroundTint="@color/orange_shadow"
        android:elevation="@dimen/spacing_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_margin="@dimen/spacing_medium_more"
                android:gravity="center_horizontal"
                android:text="@string/visit_my_networks" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium_more"
                android:layout_marginBottom="@dimen/spacing_medium_more"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/fragment_about_github_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_big_extra"
                    android:src="@drawable/github_logo" />

                <ImageButton
                    android:id="@+id/fragment_about_linkedin_image_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_big_extra"
                    android:src="@drawable/linkedin_logo" />

                <ImageButton
                    android:id="@+id/fragment_about_medium_image_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_big_extra"
                    android:src="@drawable/medium_size" />

                <ImageButton
                    android:id="@+id/fragment_about_playstore_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/playstore" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

